--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,46 @@
 body {
-  background-color: blue;
+  background-color: white;
+  margin: 0%;
+  text-align: center;
 }
-.test {
-  background-color: aqua;
+
+p {
+  margin-top: 0px;
+}
+
+.topContainer {
+  background-color: #defcfc;
+  position: relative;
+  padding-top: 100px;
+}
+
+.middleContainer {
+  background-color: red;
+  width: 200px;
+  height: 200px;
+}
+
+.bottomContainer {
+  background-color: blue;
+  width: 200px;
+  height: 200px;
+}
+
+h1 {
+  margin-top: 0;
+}
+
+.pro {
+  text-decoration: underline;
+}
+
+.cloud1 {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
+}
+.cloud0 {
+  position: absolute;
+  right: 300px;
+  top: 50px;
 }
