--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
   background-color: white;
   margin: 0%;
   text-align: center;
+  font-family: "Merriweather", serif;
 }
 
 p {
@@ -14,22 +15,24 @@ p {
   padding-top: 100px;
 }
 
-.middleContainer {
-  background-color: red;
-  width: 200px;
-  height: 200px;
-  position: relative;
-  left: 300px;
-}
-
-.bottomContainer {
-  background-color: blue;
-  width: 200px;
-  height: 200px;
-}
-
 h1 {
-  margin-top: 0;
+  margin: 50px auto 0 auto;
+  font-family: "Sacramento", cursive;
+  font-size: 6rem;
+  font-weight: normal;
+  color: #66bfbf;
+  line-height: 2;
+}
+
+h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.5rem;
+  color: #66bfbf;
+}
+
+h3 {
+  font-family: "Montserrat", sans-serif;
+  color: #11999e;
 }
 
 .pro {
@@ -45,4 +48,23 @@ h1 {
   position: absolute;
   right: 300px;
   top: 50px;
+}
+
+img {
+  border-radius: 50%;
+  /* width: 80%; */
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+a {
+  color: #11999e;
+}
+
+.skill-row {
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+  line-height: 2;
 }
