--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,7 @@ p {
 h1 {
   margin: 50px auto 0 auto;
   font-family: "Sacramento", cursive;
-  font-size: 6rem;
-  font-weight: normal;
+  font-size: 5.625rem;
   color: #66bfbf;
   line-height: 2;
 }
@@ -28,6 +27,7 @@ h2 {
   font-family: "Montserrat", sans-serif;
   font-size: 2.5rem;
   color: #66bfbf;
+  font-weight: normal;
 }
 
 h3 {
@@ -51,11 +51,15 @@ h3 {
 }
 
 img {
-  border-radius: 50%;
-  /* width: 80%; */
+  /* border-radius: 50%; */
+  /* width: 10%; */
   margin: 0;
   padding: 0;
   border: 0;
+}
+
+#photoOfMyself {
+  border-radius: 50%;
 }
 
 a {
